[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainMenu/Settings/Buttons/ResolutionSlider/ResolutionSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/Settings/Buttons/FullScreen/FullscreenCheckbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu/Settings/Settings.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/Settings/Settings.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_color = Color( 0.258824, 0.258824, 0.258824, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Settings" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
theme = SubResource( 3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -182.0
margin_right = 282.0
margin_bottom = 182.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 564.0
margin_bottom = 65.0
theme = ExtResource( 4 )
text = "Settings"
align = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 564.0
margin_bottom = 73.0
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 564.0
margin_bottom = 81.0

[node name="ResolutionSelector" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 85.0
margin_right = 564.0
margin_bottom = 148.0
theme = ExtResource( 4 )

[node name="FullscreenCheckbox" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 152.0
margin_right = 564.0
margin_bottom = 220.0
theme = ExtResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 564.0
margin_bottom = 228.0

[node name="Apply" type="Button" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 564.0
margin_bottom = 293.0
theme = ExtResource( 4 )
text = "Apply"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 297.0
margin_right = 564.0
margin_bottom = 358.0
theme = ExtResource( 4 )
text = "Close"

[connection signal="apply_button_pressed" from="." to="VBoxContainer/ResolutionSelector" method="_on_Settings_apply_button_pressed"]
[connection signal="dontchange" from="." to="VBoxContainer/ResolutionSelector" method="_on_Settings_dontchange"]
[connection signal="dontchange" from="." to="VBoxContainer/FullscreenCheckbox" method="_on_Settings_dontchange"]
[connection signal="uncheck" from="." to="VBoxContainer/FullscreenCheckbox" method="_on_Settings_uncheck"]
[connection signal="resolution_changed" from="VBoxContainer/ResolutionSelector" to="." method="_on_ResolutionSelector_resolution_changed"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
